--- a/CRM_Project/android/app/src/main/res/values/styles.xml
+++ b/CRM_Project/android/app/src/main/res/values/styles.xml
@@ -4,6 +4,12 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:textColor">#000000</item>
+        <item name="android:timePickerDialogTheme">@style/Dialog.Theme</item>
     </style>
-
+    <style name="Dialog.Theme" parent="Theme.AppCompat.Light.Dialog">
+        <!-- BackgroundColor of the date modal -->
+        <item name="colorAccent">#536dfe</item>
+        <!-- Change textColor of the date modal -->
+    <item name="android:textColorPrimary">#000000</item>
+    </style>
 </resources>
